# backend/src/main/java/de/nordakademie/iaa/library/persistent/entities/OverdueNotice.java
@@ -1,8 +1,11 @@
 package de.nordakademie.iaa.library.persistent.entities;
 
+import de.nordakademie.iaa.library.enums.OverdueNoticeState;
+
 import javax.persistence.*;
 import javax.validation.constraints.NotNull;
 import java.util.ArrayList;
+import java.util.Date;
 import java.util.List;
 import java.util.UUID;
 
@@ -12,6 +15,7 @@ import java.util.UUID;
  */
 @Entity
 public class OverdueNotice {
+
     @Id
     @GeneratedValue
     private UUID uuid;
@@ -19,6 +23,11 @@ public class OverdueNotice {
     @ManyToOne
     @NotNull
     private Assignment assignment;
+
+    private Date closedAt;
+
+    @NotNull
+    private Date openedAt = new Date();
 
     @OneToMany(mappedBy = "overdueNotice", fetch = FetchType.LAZY)
     private List<Warning> warnings = new ArrayList<>();
@@ -45,5 +54,34 @@ public class OverdueNotice {
 
     public void setWarnings(List<Warning> warnings) {
         this.warnings = warnings;
+    }
+
+    public Date getClosedAt() {
+        return closedAt;
+    }
+
+    public void setClosedAt(Date closedAt) {
+        this.closedAt = closedAt;
+    }
+
+    public Date getOpenedAt() {
+        return openedAt;
+    }
+
+    public void setOpenedAt(Date openedAt) {
+        this.openedAt = openedAt;
+    }
+
+    @Transient
+    public OverdueNoticeState getOverdueNoticeState() {
+        Date date = new Date();
+
+        if (closedAt != null) {
+            return OverdueNoticeState.CLOSED;
+        } else if (date.after(openedAt)) {
+            return OverdueNoticeState.OPENED;
+        }
+
+        return OverdueNoticeState.RESERVED;
     }
 }
